--- a/src/components/style/ProgressBar.scss
+++ b/src/components/style/ProgressBar.scss
@@ -8,7 +8,7 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 0.5rem;
+  height: 0.3rem;
   background-color: #BDDFFF;
   opacity: 0;
   transition: opacity 1.5s;
@@ -23,7 +23,7 @@
   top: 0;
   left: 0;
   bottom: 0;
-  background-color: #0082FF;
+  background-color: #0056B3;
   transition: width 1s;
 }
 
