--- a/src/views/style/App.scss
+++ b/src/views/style/App.scss
@@ -1,8 +1,19 @@
-html, body, #app, #root {
+html, body, #root {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
   font-family: 나눔바른고딕, Noto Sans KR, Noto Sans, 나눔고딕, NanumGothic,
    맑은 고딕, 돋움, Dotum, sans-serif;
+}
+
+#app {
+  min-height: 100%;
+  overflow: auto;
+  position: relative;
+}
+
+#content {
+  max-width: 65em;
+  margin: 0 auto;
 }
