Implement login view

--- a/src/components/style/Header.scss
+++ b/src/components/style/Header.scss
@@ -26,6 +26,7 @@ header {
     padding-left: 1rem;
     font-size: 1.5em;
     line-height: 2.5rem;
+    font-weight: bold;
     a:hover {
       text-decoration: none;
     }
