--- a/src/components/style/ProgressBar.scss
+++ b/src/components/style/ProgressBar.scss
@@ -11,11 +11,12 @@
   height: 0.3rem;
   background-color: #BDDFFF;
   opacity: 0;
-  transition: opacity 1.5s linear;
+  transition: opacity 1s linear;
 }
 
 #loader.enabled {
   opacity: 1;
+  transition: opacity 0s linear;
 }
 
 #loader .filling {
@@ -25,6 +26,10 @@
   bottom: 0;
   background-color: #0056B3;
   transition: width 1s linear;
+}
+
+#loader.started .filling {
+  transition: width 0s linear;
 }
 
 #loader .percentage {
