Implement better way to show loading screen

--- a/src/components/style/Header.scss
+++ b/src/components/style/Header.scss
@@ -86,7 +86,8 @@ header {
     line-height: 2.5em;
     vertical-align: middle;
     a {
-      padding: 0 0.5em;
+      padding: 0;
+      margin: 0 0.5em;
     }
   }
 }
