--- a/src/components/style/Header.scss
+++ b/src/components/style/Header.scss
@@ -1,9 +1,9 @@
 $break-small: 500pt;
 
 // TODO: invert desktop and mobile (not sure if this is necessary)
+// Can I throw up on Internet Explorer? Urrrugh!!!
 header {
   width: 100%;
-  //background-color: #ccc;
   background-color: #3284E3;
   box-shadow: 0 0 8px -2px #000;
   padding: 1em 0;
@@ -15,26 +15,21 @@ header {
     }
   }
   .container {
-    display: table;
-    display: flex;
     width: 100%;
     max-width: 65em;
     margin: 0 auto;
     vertical-align: middle;
+    display: block;
+    position: relative;
     & > * {
       vertical-align: middle;
-      display: table-cell;
-      // Stupid IE hack, heh.
-      display: flex;
-      align-items: center;
-    }
-    @media screen and (max-width: $break-small) {
-      display: block;
-      position: relative;
     }
   }
   .logo {
-    flex: 0 0 auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 9.5rem;
     padding-left: 1rem;
     font-size: 1.5em;
     line-height: 2.5rem;
@@ -42,40 +37,40 @@ header {
     a:hover {
       text-decoration: none;
     }
-    @media screen and (max-width: $break-small) {
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
   }
   .search {
-    flex: 1 1 auto;
-    padding: 0 1.5em;
-    width: 100%;
-    box-sizing: border-box;
+    padding: 0 1em;
+    margin-left: 9.5em;
+    margin-right: 16em;
+    height: 2.5rem;
     @media screen and (max-width: $break-small) {
-      display: block;
-      width: 100%;
-      overflow: hidden;
-      padding-top: 3.5em;
+      padding-top: 3.2em;
+      margin-left: 1em;
+      margin-right: 1em;
+      clear: both;
     }
     .search-form {
-      display: table;
+      position: relative;
       max-width: 30em;
+      padding: 0 1em;
       @media screen and (max-width: $break-small) {
         max-width: 100%;
       }
-      & > * {
-        display: table-cell;
-      }
       .search-text {
-        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 4em;
+      }
+      .search-btn {
+        position: absolute;
+        top: 0;
+        width: 4em;
+        right: 0;
       }
     }
     input {
       width: 100%;
-      display: table-cell;
       color: #085EC1;
       background-color: #E8F3FF;
       border: none;
@@ -90,8 +85,8 @@ header {
       }
     }
     button {
+      width: 100%;
       color: #085EC1;
-      display: table-cell;
       background-color: #E8F3FF;
       border: none;
       padding: 0 1em;
@@ -103,7 +98,11 @@ header {
     }
   }
   .session {
-    flex: 0 0 auto;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 16em;
+    text-align: right;
     color: #fff;
     padding-right: 1em;
     line-height: 2.5em;
@@ -111,13 +110,6 @@ header {
     a {
       padding: 0;
       margin: 0 0.5em;
-    }
-    @media screen and (max-width: $break-small) {
-      display: block;
-      position: absolute;
-      float: right;
-      top: 0;
-      right: 0;
     }
   }
 }
