Implement persist session

--- a/src/components/style/Alert.scss
+++ b/src/components/style/Alert.scss
@@ -1,10 +1,10 @@
 .alert {
   background-color: #FFE8E8;
-  color: #C10808;
+  color: #B32F2F;
   box-sizing: border-box;
-  padding: 0.8em 0.8em;
-  margin: 0.5em 0;
+  padding: 0.5em;
+  margin: 0.5em 0.3em;
   border-radius: 0.2em;
-  border: 1px solid #EB9494;
+  border: 1px solid #FFD1D1;
   font-size: 0.8em;
 }
