--- a/src/components/style/Dialog.scss
+++ b/src/components/style/Dialog.scss
@@ -31,7 +31,7 @@
     button {
       width: 100%;
       font-size: 1em;
-      background-color: #E8F3FF;
+      background-color: #F5FAFF;
       color: #085EC1;
       display: inline-block;
       box-sizing: border-box;
@@ -42,11 +42,11 @@
     }
     button:hover {
       border: 1px solid #AECBEB;
-      background-color: #F5FAFF;
+      background-color: #FAFCFF;
     }
     button:active {
       border: 1px solid #94BDEB;
-      background-color: #E8F3FF;
+      background-color: #FFFFFF;
     }
   }
   input {
