--- a/src/components/style/Footer.scss
+++ b/src/components/style/Footer.scss
@@ -1,8 +1,9 @@
 footer {
-  border-top: 1px solid #ccc;
   max-width: 65em;
+  padding: 0 1em;
   margin: 0 auto;
   .container {
+    border-top: 1px solid #ccc;
     text-align: center;
     padding: 1.5em;
   }
