--- a/src/components/style/SearchBar.scss
+++ b/src/components/style/SearchBar.scss
@@ -5,13 +5,13 @@ $break-small: 500pt;
   .search-form {
     position: relative;
     padding: 0 1em;
-    .search-text {
+    input {
       position: absolute;
       top: 0;
       left: 0;
-      right: 4em;
+      right: 0;
     }
-    .search-btn {
+    button {
       position: absolute;
       top: 0;
       width: 4em;
@@ -26,9 +26,9 @@ $break-small: 500pt;
     padding: 0 0.5em;
     font-size: 1em;
     height: 2.5em;
-    border-top-left-radius: 0.2em;
-    border-bottom-left-radius: 0.2em;
+    border-radius: 0.2em;
     box-sizing: border-box;
+    padding-right: 4em;
     &:hover, &:focus {
       background-color: #FAFCFF;
     }
@@ -36,13 +36,14 @@ $break-small: 500pt;
   button {
     width: 100%;
     color: #085EC1;
-    background-color: #E8F3FF;
     border: none;
     padding: 0 1em;
     font-size: 1em;
     height: 2.5em;
-    border-top-right-radius: 0.2em;
-    border-bottom-right-radius: 0.2em;
+    background-color: transparent;
     box-sizing: border-box;
+    &:hover, &:focus {
+      color: #428CE0;
+    }
   }
 }
