--- a/src/components/style/Footer.scss
+++ b/src/components/style/Footer.scss
@@ -1,7 +1,7 @@
 footer {
   max-width: 65em;
   padding: 0 1em;
-  margin: 0 auto;
+  margin: 1.5em auto;
   .container {
     border-top: 1px solid #ccc;
     text-align: center;
