--- a/src/views/style/SignUp.scss
+++ b/src/views/style/SignUp.scss
@@ -2,6 +2,7 @@
   text-align: center;
   margin: 1em auto;
   padding: 0.5em;
+  max-width: 40em;
   &>h1 {
     text-align: left;
     margin: 0.2em 0;
@@ -16,15 +17,15 @@
   &>.dialog {
     margin: 0.5em auto;
   }
-  &>.oauthform {
+  &>.signupSelect {
     margin: 0.5em auto;
     &>h1 {
       color: #666;
       font-size: 1.2em;
     }
-    button {
+    &>button {
       width: 100%;
-      max-width: 23em;
+      max-width: 25em;
       font-size: 1em;
       background-color: grayscale(#F5FAFF);
       color: grayscale(#085EC1);
@@ -35,11 +36,11 @@
       border-radius: 0.2em;
       border: 1px solid grayscale(#94BDEB);
     }
-    button:hover {
+    &>button:hover {
       border: 1px solid grayscale(#AECBEB);
       background-color: grayscale(#FAFCFF);
     }
-    button:active {
+    &>button:active {
       border: 1px solid grayscale(#94BDEB);
       background-color: grayscale(#FFFFFF);
     }
