--- a/src/views/style/App.scss
+++ b/src/views/style/App.scss
@@ -7,6 +7,11 @@ html, body, #root {
    맑은 고딕, 돋움, Dotum, sans-serif;
 }
 
+button, input {
+  font-family: Noto Sans KR, Noto Sans, 나눔고딕, NanumGothic,
+   맑은 고딕, 돋움, Dotum, sans-serif;
+}
+
 html {
   // 10pt on mobile
   font-size: 10pt;
