--- a/src/components/style/SearchBar.scss
+++ b/src/components/style/SearchBar.scss
@@ -23,12 +23,14 @@ $break-small: 500pt;
     color: #085EC1;
     background-color: #E8F3FF;
     border: none;
+    margin: 0;
     padding: 0 0.5em;
     font-size: 1em;
     height: 2.5em;
     border-radius: 0.2em;
     box-sizing: border-box;
     padding-right: 4em;
+    display: inline-block;
     &:hover, &:focus {
       background-color: #FAFCFF;
     }
@@ -37,11 +39,13 @@ $break-small: 500pt;
     width: 100%;
     color: #085EC1;
     border: none;
+    margin: 0;
     padding: 0 1em;
     font-size: 1em;
     height: 2.5em;
     background-color: transparent;
     box-sizing: border-box;
+    display: inline-block;
     &:hover, &:focus {
       color: #428CE0;
     }
