--- a/src/views/style/App.scss
+++ b/src/views/style/App.scss
@@ -30,3 +30,55 @@ html {
   margin: 0 auto;
   padding: 0 0.5em;
 }
+
+.form {
+  width: 25em;
+  margin: 0 auto;
+}
+
+button {
+  font-size: 1em;
+  background-color: #F5FAFF;
+  color: #085EC1;
+  display: inline-block;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0.6em 0.8em;
+  margin: 0.5em 0;
+  border-radius: 0.2em;
+  border: 1px solid #94BDEB;
+}
+button:hover {
+  border: 1px solid #AECBEB;
+  background-color: #FAFCFF;
+}
+button:active {
+  border: 1px solid #94BDEB;
+  background-color: #FFFFFF;
+}
+button:disabled {
+  background-color: grayscale(#F5FAFF);
+  color: grayscale(#085EC1);
+  border: 1px solid grayscale(#94BDEB);
+}
+input {
+  font-size: 1em;
+  background-color: #fff;
+  color: #333;
+  display: inline-block;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0.6em 0.8em;
+  margin: 0.5em 0;
+  border-radius: 0.2em;
+  border: 1px solid #ccc;
+}
+input:hover {
+  border: 1px solid #999;
+}
+input:focus {
+  border: 1px solid #83B1F2;
+}
+input:invalid {
+  box-shadow: none;
+}
