--- a/src/views/style/SignUp.scss
+++ b/src/views/style/SignUp.scss
@@ -4,13 +4,14 @@
   padding: 0.5em;
   max-width: 40em;
   &>h1 {
-    text-align: left;
     margin: 0.2em 0;
     color: #333;
-    font-weight: normal;
+  }
+  .loading {
+    font-size: 2em;
+    padding: 1.5rem;
   }
   &>.footer {
-    text-align: left;
     color: #333;
     font-size: 0.8em;
   }
