--- a/src/views/style/SignUp.scss
+++ b/src/views/style/SignUp.scss
@@ -1,13 +1,19 @@
-#signup {
+#signup, #login {
+  position: relative;
   text-align: center;
   margin: 1em auto;
   padding: 0.5em;
-  max-width: 40em;
+  //max-width: 40em;
   &>h1 {
-    margin: 0.2em 0;
+    margin: 0;
+    padding: 1rem 0;
     color: #333;
   }
-  .loading {
+  &>p {
+    max-width: 40em;
+    margin: 1em auto;
+  }
+  &>.loading {
     font-size: 2em;
     padding: 1.5rem;
   }
@@ -15,38 +21,26 @@
     color: #333;
     font-size: 0.8em;
   }
-  &>.dialog {
-    margin: 0.5em auto;
-  }
-  &>.signupSelect {
-    margin: 0.5em auto;
-    &>h1 {
-      color: #666;
-      font-size: 1.2em;
-    }
-    &>button {
-      max-width: 25em;
-    }
-    /*&>button {
-      width: 100%;
-      max-width: 25em;
-      font-size: 1em;
-      background-color: grayscale(#F5FAFF);
-      color: grayscale(#085EC1);
+  &>.select {
+    margin: 0 auto;
+    &>.section {
       display: inline-block;
-      box-sizing: border-box;
-      padding: 0.6em 0.8em;
-      margin: 0.5em 0;
-      border-radius: 0.2em;
-      border: 1px solid grayscale(#94BDEB);
+      width: 25em;
+      margin: 0 1em;
+      vertical-align: middle;
+      &>h1 {
+        font-size: 1.3em;
+      }
+      &.others {
+        width: 20em;
+      }
+      @media screen and (max-width: 25em) {
+        width: 100%;
+        margin: 0 auto;
+        &.others {
+          width: auto;
+        }
+      }
     }
-    &>button:hover {
-      border: 1px solid grayscale(#AECBEB);
-      background-color: grayscale(#FAFCFF);
-    }
-    &>button:active {
-      border: 1px solid grayscale(#94BDEB);
-      background-color: grayscale(#FFFFFF);
-    }*/
   }
 }
