--- a/src/components/style/ErrorOverlay.scss
+++ b/src/components/style/ErrorOverlay.scss
@@ -9,4 +9,9 @@
   justify-content: center;
   align-items: center;
   padding: 0.5em;
+  &>.middle {
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+  }
 }
