--- a/src/components/style/Header.scss
+++ b/src/components/style/Header.scss
@@ -73,5 +73,14 @@ header {
       padding: 0;
       margin: 0 0.5em;
     }
+    .profile {
+      width: 2.5em;
+      height: 2.5em;
+      vertical-align: middle;
+      border: none;
+      padding: 0.1em;
+      border-radius: 100%;
+      box-sizing: border-box;
+    }
   }
 }
