--- a/src/components/style/DropDownMenu.scss
+++ b/src/components/style/DropDownMenu.scss
@@ -17,6 +17,15 @@
   display: inline-block;
   position: relative;
   $TRIANGLE_SIZE: 8.3pt;
+  &>.cover {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: transparent;
+    z-index: 9;
+  }
   &>.button {
     display: block;
     cursor: pointer;
@@ -25,13 +34,11 @@
       min-width: 1em;
       display: inline-block;
     }
-    &:hover {
-      &>.icon {
-        opacity: 0.6;
-      }
-      &>.title {
-        text-decoration: underline;
-      }
+    &>.icon {
+      opacity: 0.6;
+    }
+    &>.title {
+      text-decoration: underline;
     }
   }
   &>.arrow:before {
@@ -66,19 +73,54 @@
       margin: 0;
       padding: 0;
     }
-    a {
-      display: block;
-      color: #000;
-      padding: 0.5em 1em;
-      margin: 0;
-      &:hover {
+    p {
+      margin: 0.4em 0;
+      &.bold {
+        font-weight: bold;
+      }
+      &.small {
+        font-size: 0.8em;
+        color: #666;
+      }
+      &.right {
+        text-align: right;
+      }
+    }
+    li {
+      &>a, &>p {
+        display: block;
+        color: #000;
+        padding: 0.5rem 1rem;
+        margin: 0;
+      }
+      &>p {
+        color: #666;
+        font-size: 0.8em;
+      }
+      &>a:hover {
         text-decoration: none;
         background-color: #eee;
       }
     }
   }
   &.hidden {
-    &>.arrow,&>.content {
+    &>.button {
+      &>.icon {
+        opacity: 1;
+      }
+      &>.title {
+        text-decoration: none;
+      }
+      &:hover {
+        &>.icon {
+          opacity: 0.6;
+        }
+        &>.title {
+          text-decoration: underline;
+        }
+      }
+    }
+    &>.arrow,&>.content,&>.cover {
       display: none;
     }
   }
