--- a/src/views/style/App.scss
+++ b/src/views/style/App.scss
@@ -7,7 +7,7 @@ html, body, #root {
    맑은 고딕, 돋움, Dotum, sans-serif;
 }
 
-button, input {
+button, input, textarea {
   font-family: Noto Sans KR, Noto Sans, 나눔고딕, NanumGothic,
    맑은 고딕, 돋움, Dotum, sans-serif;
 }
@@ -62,7 +62,7 @@ button:disabled {
   color: grayscale(#085EC1);
   border: 1px solid grayscale(#94BDEB);
 }
-input {
+input, textarea {
   font-size: 1em;
   background-color: #fff;
   color: #333;
@@ -73,13 +73,14 @@ input {
   margin: 0.5em 0;
   border-radius: 0.2em;
   border: 1px solid #ccc;
-}
-input:hover {
-  border: 1px solid #999;
-}
-input:focus {
-  border: 1px solid #83B1F2;
-}
-input:invalid {
-  box-shadow: none;
+  resize: vertical;
+  &:hover {
+    border: 1px solid #999;
+  }
+  &:focus {
+    border: 1px solid #83B1F2;
+  }
+  &:invalid {
+    box-shadow: none;
+  }
 }
