--- a/src/views/style/UserProfile.scss
+++ b/src/views/style/UserProfile.scss
@@ -1,13 +1,16 @@
+$break-small: 500pt;
+
 #user-profile {
   .card {
     text-align: center;
     padding: 0.5em;
     margin-top: 1em;
-    &>.photo, &>.content {
+    position: relative;
+    .photo, .content {
       display: inline-block;
       vertical-align: top;
     }
-    &>.photo {
+    .photo {
       img {
         width: 100%;
         max-width: 12em;
@@ -19,7 +22,7 @@
       }
       margin: 0 0.5em;
     }
-    &>.content {
+    .content {
       padding: 0 0.5em;
       margin-top: 0.5em;
       max-width: 18em;
@@ -30,7 +33,11 @@
         margin: 0;
         padding: 0;
       }
-      &>div {
+      input, textarea {
+        padding: 0.5rem;
+        margin: 0.1rem 0;
+      }
+      .identity, .contact {
         margin-bottom: 0.7em;
       }
       .identity {
@@ -38,6 +45,7 @@
           color: #333;
           font-size: 1.7em;
           margin-bottom: 0.1em;
+          font-weight: bold;
         }
         .username {
           color: #666;
@@ -64,13 +72,38 @@
       }
       .bio {
         font-size: 0.9em;
+        white-space: pre-line;
       }
     }
-    &:after {
-      content: '';
-      display: block;
-      font-size: 0;
-      clear: both;
+    .edit {
+      position: absolute;
+      right: 0.4em;
+      top: 0;
+      button {
+        display: block;
+      }
+      .description {
+        margin-left: 0.5em;
+      }
+      @media screen and (max-width: 600pt) {
+        .description {
+          display: none;
+        }
+      }
+      @media screen and (max-width: $break-small) {
+        position: static;
+        display: block;
+        margin-top: 0.4em;
+        button {
+          display: inline-block;
+          width: auto;
+          margin: 0.3em 0.4em;
+          min-width: 9em;
+        }
+        .description {
+          display: inline;
+        }
+      }
     }
   }
   text-align: center;
