--- a/src/components/style/ErrorOverlay.scss
+++ b/src/components/style/ErrorOverlay.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   padding: 0.5em;
+  z-index: 1000;
   &>.middle {
     overflow: auto;
     width: 100%;
