Fix user profile set checking bug

--- a/src/views/style/UserProfile.scss
+++ b/src/views/style/UserProfile.scss
@@ -12,7 +12,8 @@ $break-small: 500pt;
     }
     .photo {
       img {
-        width: 100%;
+        width: 12rem;
+        height: 12rem;
         max-width: 12rem;
         max-height: 12rem;
         padding: 0.3rem;
