--- a/src/components/style/DropDownMenu.scss
+++ b/src/components/style/DropDownMenu.scss
@@ -101,9 +101,10 @@
     li {
       &>a, &>p {
         display: block;
-        color: #000;
+        color: #333;
         padding: 0.5rem 1rem;
         margin: 0;
+        font-size: 0.9em;
       }
       &>p {
         color: #666;
