--- a/src/components/style/Overlay.scss
+++ b/src/components/style/Overlay.scss
@@ -7,6 +7,7 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.3);
   .container {
+    overflow: auto;
     display: table;
     width: 100%;
     height: 100%;
