Implement script viewing page. Resolves #25

--- a/src/views/style/Settings.scss
+++ b/src/views/style/Settings.scss
@@ -11,6 +11,7 @@ $break-small: 500pt;
       border: 1px solid #ccc;
       border-radius: 0.2rem;
       margin: 1.5em 0.5em;
+      margin-bottom: 0;
       overflow: hidden;
     }
     h1 {
