Implement entry creating form. Resolves #21.

--- a/src/components/style/EntryMiniCard.scss
+++ b/src/components/style/EntryMiniCard.scss
@@ -1,6 +1,6 @@
 .entry-mini-card {
   padding: 0.6em 0.8em;
-  border: 1px solid #aaa;
+  border: 1px solid #ccc;
   border-radius: 0.3em;
   &>.title {
     vertical-align: middle;
@@ -50,7 +50,7 @@
     &>li {
       padding: 0.4em;
       display: inline-block;
-      border: 1px solid #aaa;
+      border: 1px solid #ccc;
       border-radius: 0.3em;
       font-size: 0.9em;
     }
