--- a/src/views/style/EntryView.scss
+++ b/src/views/style/EntryView.scss
@@ -4,7 +4,7 @@
     max-width: 45em;
     margin: 1.5em auto;
     box-sizing: border-box;
-    border: 1px solid #aaa;
+    border: 1px solid #ccc;
     border-radius: 0.3em;
     &>.entry-mini-card {
       border: none;
@@ -12,16 +12,18 @@
     }
     &>.description {
       clear: both;
-      border-top: 1px solid #999;
+      border-top: 1px solid #ccc;
       padding: 0 0.6em;
     }
   }
   &>.script {
-    max-width: 45em;
-    margin: 1.5em auto;
+    max-width: 45rem;
+    margin: 1.5rem auto;
     box-sizing: border-box;
-    border: 1px solid #aaa;
-    border-radius: 0.3em;
-    padding: 0.6em 0.8em;
+    border: 1px solid #ccc;
+    border-radius: 0.3rem;
+    padding: 0.6rem 0.8rem;
+    overflow: auto;
+    font-size: 0.95em;
   }
 }
