--- a/src/views/style/Settings.scss
+++ b/src/views/style/Settings.scss
@@ -82,31 +82,70 @@ $break-small: 500pt;
       //background-color: #f9f9f9;
       //border-bottom: 1px solid #ccc;
     }
-    .authMethod {
+    .localMethod, .authMethod {
       border-bottom: 1px solid #ccc;
-      display: table;
-      width: 100%;
-      &>h2 {
-        display: table-cell;
-        font-size: 1.05em;
-        padding: 0;
-        margin: 0;
-        color: #333;
-        width: 80%;
-        vertical-align: middle;
-      }
-      &>.actions {
-        display: table-cell;
-        min-width: 8em;
-        vertical-align: middle;
-      }
       &:last-child {
         border-bottom: none;
       }
     }
+    .localMethod {
+      &>h2 {
+        font-size: 1.05em;
+        padding: 0;
+        margin: 0;
+        color: #333;
+      }
+    }
+    .authMethod {
+      display: block;
+      width: 100%;
+      text-align: justify;
+      font-size: 0;
+      &>h2 {
+        display: inline-block;
+        font-size: 1.05rem;
+        padding: 0;
+        margin: 0;
+        color: #333;
+        vertical-align: middle;
+      }
+      &>.actions {
+        display: inline-block;
+        min-width: 8rem;
+        vertical-align: middle;
+        font-size: 1rem;
+        &.form {
+          width: auto;
+          text-align: right;
+          margin-left: 0.2em;
+          .content {
+            display: inline-block;
+            vertical-align: middle;
+          }
+          .errorInput {
+            display: inline-block;
+            vertical-align: text-top;
+            margin: 0 0.2em;
+          }
+          .footer {
+            margin-left: 0.4em;
+            display: inline-block;
+            vertical-align: middle;
+          }
+        }
+      }
+      &:after {
+        content: '';
+        display: inline-block;
+        width: 100%;
+        height: 0;
+        font-size: 0;
+        line-height: 0;
+      }
+    }
     &>.content {
       padding: 1em;
-      .input {
+      .input, .errorInput {
         max-width: 20em;
       }
       .footer {
@@ -115,6 +154,10 @@ $break-small: 500pt;
           width: auto;
           padding-left: 1.5em;
           padding-right: 1.5em;
+          min-width: 8em;
+        }
+        &.right {
+          text-align: right;
         }
       }
     }
