--- a/src/views/style/Settings.scss
+++ b/src/views/style/Settings.scss
@@ -119,18 +119,22 @@ $break-small: 500pt;
           text-align: right;
           margin-left: 0.2em;
           .content {
-            display: inline-block;
             vertical-align: middle;
-          }
-          .errorInput {
-            display: inline-block;
-            vertical-align: text-top;
-            margin: 0 0.2em;
+            &.flow {
+              display: inline-block;
+              .errorInput {
+                display: inline-block;
+                vertical-align: text-top;
+                margin: 0 0.2em;
+              }
+            }
           }
           .footer {
-            margin-left: 0.4em;
             display: inline-block;
             vertical-align: middle;
+            button {
+              margin-left: 0.4em;
+            }
           }
         }
       }
