--- a/src/components/style/EntryMiniCard.scss
+++ b/src/components/style/EntryMiniCard.scss
@@ -2,6 +2,7 @@
   padding: 0.6em 0.8em;
   border: 1px solid #ccc;
   border-radius: 0.3em;
+  text-align: left;
   &>.title {
     vertical-align: middle;
     font-size: 1.8em;
