--- a/src/components/style/EntryMiniCard.scss
+++ b/src/components/style/EntryMiniCard.scss
@@ -3,29 +3,69 @@
   border: 1px solid #ccc;
   border-radius: 0.3em;
   text-align: left;
-  &>.title {
-    vertical-align: middle;
-    font-size: 1.8em;
-    font-weight: normal;
-    margin: 0.4em 0;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    &>.fa {
-      color: #444;
-      padding-right: 0.3em;
+  margin: 1em 0;
+  box-shadow: 0 3px 6px -1px rgba(0, 0, 0, 0.5);
+  &>.head {
+    width: 100%;
+    &>.title {
+      display: inline-block;
+      vertical-align: middle;
+      max-width: 100%;
+      width: auto;
+      font-size: 1em;
+      font-weight: bold;
+      margin: 0.4em 0;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      box-sizing: border-box;
+      input {
+        font-weight: bold;
+      }
+      &>.fa {
+        color: #444;
+        padding-right: 0.3em;
+      }
+      &>a {
+        color: #000;
+        text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
-    &:after {
-      content: '';
-      clear: both;
-      display: block;
-      font-size: 0;
+    &>.author {
+      display: inline-block;
+      vertical-align: middle;
+      &>.user-mini-card:after {
+        content: '/';
+        color: #888;
+        font-weight: normal;
+        font-size: 1em;
+        padding: 0 0.3em;
+      }
     }
-    &>a {
-      color: #000;
-      text-decoration: none;
-      &:hover {
-        text-decoration: underline;
+    &.tabular {
+      display: table;
+      text-align: left;
+      &>.author {
+        display: table-cell;
+        width: auto;
+        white-space: nowrap;
+      }
+      &>.title {
+        display: table-cell;
+        text-align: left;
+        width: 100%;
+        overflow: visible;
+        text-overflow: normal;
+        &>.errorInput {
+          width: 100%;
+          display: inline-block;
+        }
+        &:before {
+          display: none;
+        }
       }
     }
   }
