Add permission check to display edit button

--- a/src/views/style/EntryView.scss
+++ b/src/views/style/EntryView.scss
@@ -16,6 +16,8 @@
     }
     &>.actions {
       text-align: right;
+      padding: 0.5em;
+      border-top: 1px solid #ccc;
       button {
         display: inline-block;
         width: auto;
