--- a/src/components/ui/style/ProgressBar.scss
+++ b/src/components/ui/style/ProgressBar.scss
@@ -11,7 +11,7 @@
   height: 0.3rem;
   background-color: #BDDFFF;
   opacity: 0;
-  transition: opacity 1s linear;
+  transition: opacity 0s linear 0.5s;
 }
 
 #loader.enabled {
@@ -25,7 +25,7 @@
   left: 0;
   bottom: 0;
   background-color: #0056B3;
-  transition: width 1s linear;
+  transition: width 0.5s linear;
 }
 
 #loader.started .filling {
