Deny loading again while loading. Resolves #60.

--- a/src/views/style/App.scss
+++ b/src/views/style/App.scss
@@ -31,6 +31,10 @@ html {
   padding: 0 0.5em;
 }
 
+.container {
+  position: relative;
+}
+
 .small-content {
   margin: 0 auto;
   max-width: 40em;
