--- a/src/views/style/EntryView.scss
+++ b/src/views/style/EntryView.scss
@@ -38,9 +38,19 @@
     box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 0.3rem;
-    padding: 0.6rem 0.8rem;
+    // padding: 0.6rem 0.8rem;
     overflow: auto;
     font-size: 0.95em;
     box-shadow: 0 3px 6px -1px rgba(0, 0, 0, 0.5);
+    &>pre {
+      margin: 0;
+    }
+    .hljs {
+      padding: 0.6rem 0.8rem;
+    }
+    .ace_editor {
+      margin: 0;
+      border: none;
+    }
   }
 }
