--- a/src/views/style/EntryView.scss
+++ b/src/views/style/EntryView.scss
@@ -34,6 +34,7 @@
   }
   &>.script {
     max-width: 45rem;
+    max-height: 40rem;
     margin: 1.5rem auto;
     box-sizing: border-box;
     border: 1px solid #ccc;
