--- a/src/views/style/App.scss
+++ b/src/views/style/App.scss
@@ -31,6 +31,14 @@ html {
   padding: 0 0.5em;
 }
 
+.loading {
+  font-size: 2rem;
+  text-align: center;
+  &.content {
+    padding: 1.5rem;
+  }
+}
+
 .container {
   position: relative;
 }
