--- a/src/views/style/EntryView.scss
+++ b/src/views/style/EntryView.scss
@@ -7,6 +7,7 @@
     border: 1px solid #ccc;
     border-radius: 0.3em;
     box-shadow: 0 3px 6px -1px rgba(0, 0, 0, 0.5);
+    position: relative;
     &>.entry-mini-card {
       border: none;
       border-radius: 0;
