--- a/src/views/style/EntryView.scss
+++ b/src/views/style/EntryView.scss
@@ -6,7 +6,7 @@
     box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 0.3em;
-    box-shadow: 0 3px 6px -1px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 1px 2px -1px rgba(0, 0, 0, 0.5);
     position: relative;
     &>.entry-mini-card {
       border: none;
@@ -43,12 +43,13 @@
     // padding: 0.6rem 0.8rem;
     overflow: auto;
     font-size: 0.95em;
-    box-shadow: 0 3px 6px -1px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 1px 2px -1px rgba(0, 0, 0, 0.5);
     &>pre {
       margin: 0;
     }
     .hljs {
       padding: 0.6rem 0.8rem;
+      min-height: 10rem;
     }
     .ace_editor {
       margin: 0;
